2005-05-05  Dan Williams  <dcbw@redhat.com>

	* src/nm-dbus-nm.c: Fix misuse of a g_assert() (Colin Walters)

	Patch from Bill Moss:
	* src/NetworkManagerDevice.c:
		- (nm_device_set_up_down): Fix return value checking of ioctl()
	* src/NetworkManagerPolicy.c:
		- (nm_policy_allowed_ap_list_update): Improve handling of
			non-ESSID broadcasting access points
	* src/NetworkManagerAPList.c:
		- (nm_ap_list_remove_duplicate_essids):
		  (nm_ap_list_merge_scanned_ap):
			Improve handling of non-ESSID broadcasting access points

	Patch from Tom Parker:
	* src/NetworkManagerDevice.c:
		- Use g_thread_join() rather than spinning when shutting down
			device worker threads
	* src/NetworkMangaer.c:
		- (nm_data_free): unref the signal handler GIOChannel
	* src/NetworkManagerAPList.c
		- (nm_ap_list_unref): don't leak the list object

	Patch from Peter Jones:
		- Remove usage of varargs so that we work on PPC too

2005-04-06  Dan Williams  <dcbw@redhat.com>

	Add debug code for socket/file descriptor leaks.  We register every socket
	that we open (except for stuff in dhcpcd/) for tracking, and print out the
	list of sockets that we forgot to close on shutdown.  This also consolidates
	about 4 places where we opened sockets into 1 function in NetworkManagerUtils.c

2005-04-06  Dan Williams  <dcbw@redhat.com>

	* src/NetworkManagerAPList.[ch]
		- (nm_ap_list_remove_ap_by_essid): new function

	* src/NetworkManagerDevice.c
		- (nm_device_wireless_force_use): remove access points from the ignore list
			when the user forces them

2005-04-06  Dan Williams  <dcbw@redhat.com>

	* dhcpcd/dhcpcd.c
		- (dhcp_interface_free): fix a file descriptor leak that may have
			caused network drivers to not unload due to refcounts > 0

2005-04-04  Dan Williams  <dcbw@redhat.com>

	* src/NetworkManagerDevice.c:
		- (nm_completion_scan_has_results): restore pre-completion-patch behavior
			of only erroring after the second consecutive scan times out.  Also